--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@ WebVRConfig = {
    */
 
   // Forces availability of VR mode.
-  FORCE_ENABLE_VR: true, // Default: false.
+  // FORCE_ENABLE_VR: true, // Default: false.
   // Complementary filter coefficient. 0 for accelerometer, 1 for gyro.
   //K_FILTER: 0.98, // Default: 0.98.
   // How far into the future to predict during fast motion.
@@ -46,7 +46,7 @@ WebVRConfig = {
   // panoramas with nothing interesting above or below.
   //YAW_ONLY: true, // Default: false.
   // Enable the deprecated version of the API (navigator.getVRDevices).
-  //ENABLE_DEPRECATED_API: true, // Default: false.
+  // ENABLE_DEPRECATED_API: true, // Default: false.
   // Scales the recommended buffer size reported by WebVR, which can improve
   // performance. Making this very small can lower the effective resolution of
   // your scene.
@@ -97,6 +97,8 @@ WebVRConfig = {
 // Setup three.js WebGL renderer. Note: Antialiasing is a big performance hit.
 // Only enable it if you actually need to.
 var renderer = new THREE.WebGLRenderer({antialias: true});
+
+
 renderer.setPixelRatio(window.devicePixelRatio);
 
 // Append the canvas element created by the renderer to document body element.
